# CMake

testCMake2/: CMakeLists.txt  testCMake2.kdev4
testCMake2/.kdev4/: testCMake2.kdev4
testCMake2/doc/: CMakeLists.txt
testCMake2/src/: CMakeLists.txt  main.cpp
testcmake/: CMakeLists.txt  testcmake.kdev4
testcmake/.kdev4/: testcmake.kdev4
testcmake/src/: CMakeLists.txt
testcmake3/: CMakeLists.txt  testcmake3.kdev4
testcmake3/.kdev4/: testcmake3.kdev4
testcmake3/doc/: text.txt
testcmake3/src/: CMakeLists.txt  main.cpp
testcmakelib/: CMakeLists.txt  testcmakelib.kdev4
testcmakelib/.kdev4/: testcmakelib.kdev4
testcmakelib/src/: CMakeLists.txt  testcmakelib.cpp
testcmakelib2/: CMakeLists.txt  testcmakelib2.kdev4
testcmakelib2/.kdev4/: testcmakelib2.kdev4
testcmakelib2/src/: CMakeLists.txt  main.cpp
